[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/SectionTwo.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 3, 1, 4 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 3, 1, 1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 3, 1, 1 )

[node name="SectionOne" type="StaticBody"]
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1.26, 0, 0, 0, 2.4, 0, 0, 0, 1.488, 0, 0, 2 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="CollisionBegin" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5 )
shape = SubResource( 2 )
disabled = true

[node name="CollisionEnd" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5 )
shape = SubResource( 3 )
disabled = true
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
